syntax = "proto3";

package org.tty.dailyset.dailyset_unic;

option java_multiple_files = true;
option java_package = "org.tty.dailyset.dailyset_unic.grpc";
option java_outer_classname = "MessageProto";

service MessageService {
  rpc createMessageChannel(CreateMessageChannelRequest) returns (stream MessageResponse) {}
}

message CreateMessageChannelRequest {

}

message MessageResponse {
  string topic = 1;
  string referer = 2;
  int32 code = 3;
  string content = 4;
}